cmake_minimum_required(VERSION 3.15)
project(BeeAgent)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
set(CMAKE_BUILD_TYPE "RELEASE")

if (APPLE)
    if(NOT TARGET spdlog)
        find_package(spdlog REQUIRED)
    endif()
    find_package(nlohmann_json 3.2.0 REQUIRED)
    include_directories(/usr/local/include)
    link_directories(/usr/local/lib)
    add_executable(bee_agent main.cc)
    target_link_libraries(bee_agent PRIVATE "/usr/local/lib/libuv.a" spdlog::spdlog nlohmann_json::nlohmann_json)
elseif(WIN32)
    include_directories(include)
    link_directories(lib)
    add_executable(bee_agent main.cc)
    target_link_libraries(bee_agent PRIVATE uv spdlog)
else()
    include_directories(include)
    link_directories(lib)
    add_executable(bee_agent main.cc)
    target_link_libraries(bee_agent PRIVATE uv spdlog)
endif()